Fix virtual table icon alignments

--- a/style/common.css
+++ b/style/common.css
@@ -407,7 +407,6 @@ td.virtualtable {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
-  display: inline-block;
   height: 16px;
   width: 16px;
   line-height: 16px;
