--- a/uikit/css/virtualtable.css
+++ b/uikit/css/virtualtable.css
@@ -87,7 +87,7 @@ table.virtualtable-columns {
 }
 
 .virtualtable-column-icon {
-  display: inline-block;
+  display: inline-flex;
   padding: 0;
   font-size: 12px;
   vertical-align: middle;
@@ -179,6 +179,7 @@ table.virtualtable-columns {
 }
 
 .virtualtable-icon {
+  display: inline-flex;
   flex-grow: 0;
   flex-shrink: 0;
   margin: 0;
